# kantan

./: Makefile  README.md  pyproject.toml  requirements.txt
src/kantan/: __init__.py  __main__.py  builder.py  cli.py  cmd.py
src/tests/: test_builder.py  test_kantan.py
src/tests/fixtures/: configuration.json  pip.conf
